fixed mobiel overflow issue

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ h3 {
 }
 .project > * {
   flex: 1;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 .project figure {
   border-radius: 4px;
@@ -398,8 +398,8 @@ h3 {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   section {
-    margin-inline: 0.6rem;
-    margin-block: 2rem;
+    margin-inline: 1.5rem;
+    margin-block: 3rem;
   }
   nav {
     margin-inline: 0px;
@@ -420,11 +420,11 @@ h3 {
     display: none;
   }
   .projects {
-    gap: 2rem;
+    gap: 2.5rem;
   }
   .project {
     flex-direction: column-reverse !important;
-    gap: 0.5rem;
+    gap: 1.5rem;
   }
   .project .description {
     gap: 0.96rem;
@@ -438,6 +438,21 @@ h3 {
   }
   .btn {
     padding: 0.8rem 1.5rem;
+  }
+  .hiddenSlideLeft,
+  .hiddenSlideRight,
+  .hiddenFadeIn {
+    opacity: 0;
+    transition: all 1s;
+    filter: blur(5px);
+    transform: translateX(0%);
+    transform: translateY(50%);
+  }
+  .service:nth-child(2) {
+    transition-delay: 200ms;
+  }
+  .service:nth-child(3) {
+    transition-delay: 400ms;
   }
 }
 
